--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <head>
 
 	<title>Gato Mágico Entretenimento</title>
-	<meta charset="utf-8" />
-   	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta charset="ISO-8859-1" />
+   	<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1" />
     	<style type="text/css">
     		body {
         	background-color: #f0f0f2;
