modificando extenções para dar certo

--- a/about.html
+++ b/about.html
@@ -62,10 +62,10 @@
                   <li><a href="#">Jogo 2</a></li>
                 </ul>
               </li>
-              <li><a href="blog.php">Blog</a></li>
-              <li class="active"><a href="about.php">Sobre Nós</a></li>
-              <li><a href="contact.php">Contato</a></li>
-              <li><a href="press.php">Imprensa</a></li>
+              <li><a href="blog.html">Blog</a></li>
+              <li class="active"><a href="about.html">Sobre Nós</a></li>
+              <li><a href="contact.html">Contato</a></li>
+              <li><a href="press.html">Imprensa</a></li>
             </ul>
            
           </div><!--/.nav-collapse -->
