--- a/about.html
+++ b/about.html
@@ -78,15 +78,9 @@ $(document).ready(function()
   <div id="menu" class="menu opacity">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="ourgames.html">Jogos</a>
-        <ul>
-        	<li><a href="portfolio.html">Nossos Jogos</a></li>
-            <li><a href="ourgames.html">Jogos Públicados</a></li>
-        </ul>
-      </li>
+      <li><a href="ourgames.html">Jogos</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="about.html">Sobre Nós</a></li>
-      <li><a href="contact.html">Contato</a></li>
       <li><a href="press.html">Imprensa</a></li>
     </ul>
     <br style="clear: left" />
@@ -99,17 +93,23 @@ $(document).ready(function()
       <div class="one-third"><img src="images/our-team.jpg" alt="" /></div>
       <div class="two-third last">
         <h2>Sobre nós</h2>
-        <p>Fundada em 2017, </p>
+        <p>Fundada em 2017, somos uma desenvolvedora de jogos atualmente focada em casual mobile games. Temos como missão integrar todas as pessoas do mundo através de jogos e, para isso, querermos trabalhar para crescer e termos seguimentos em todos os consoles, com jogos de todos os tipos e, futuramente, jogos de tabuleiros e de cartas.</p>
         <br />
-        <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Nulla vitae elit libero, a pharetra augue. Nullam quis risus eget urna mollis ornare vel eu leo. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-        <br />
-        <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras mattis consectetur purus sit amet fermentum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis risus eget urna mollis ornare vel eu leo. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
-        <br />
-        <br />
-        <h4>Fermentum Purus Ipsum</h4>
-        <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl.</p>
-        <br />
-        <p>Aenean lacinia bibendum nulla sed consectetur. Vestibulum id ligula porta felis euismod semper. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        <h4>Missão</h4>
+        <p>Integrar todas as pessoas do mundo através de jogos</p>
+        <br>
+        <h4>Visão</h4>
+        <p>Nossa visão para os próximos cinco anos é estar consolidada como uma empresa brasileira de jogos mobile e começar a produção de um título AAA nacional</p>
+        <br>
+        <h4>Valores</h4>
+        <p>
+        <ul>
+          <li><strong>Divertir</strong> todos os nossos clientes</li>
+          <li><strong>Qualidade</strong> em todos os nossos jogos</li>
+          <li><strong>Integridade</strong> entre nossas equipes e com nossos clientes e parceiros</li>
+        </ul>  
+        </p>
+        <br>
       </div>
       <div class="clear"></div>
     </div>
