--- a/index.html
+++ b/index.html
@@ -78,15 +78,9 @@ $(document).ready(function()
   <div id="menu" class="menu opacity">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="ourgames.html">Jogos</a>
-        <ul>
-        	<li><a href="portfolio.html">Nossos Jogos</a></li>
-            <li><a href="ourgames.html">Jogos Públicados</a></li>
-        </ul>
-      </li>
+      <li><a href="ourgames.html">Jogos</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="about.html">Sobre Nós</a></li>
-      <li><a href="contact.html">Contato</a></li>
       <li><a href="press.html">Imprensa</a></li>
     </ul>
     <br style="clear: left" />
@@ -109,7 +103,7 @@ $(document).ready(function()
         <!-- Put the slide content in a div with the class .showcase-content. -->
         <div class="showcase-content"> <img src="images/slide2.png" alt="2" /> </div>
         <div class="showcase-caption">
-            <a href="#">Clique para mais informações</a>
+            <a href="#">Clique aqui para mais informações</a>
 		</div>
       </div>
     </div>
@@ -121,15 +115,11 @@ $(document).ready(function()
     <!-- Begin Top Columns -->
     <div class="two-third">
       <h2>A Magikat</h2>
-      <p>Somos uma empresa brasileira especializada no desenvolvimento e publicação de jogos. Somos apaixonados por todos os tipos de jogos: mobile, para computador, para consoles, jogos de tabuleiro e também jogos de cartas! Dessa paixão, surgiu a ideia de produzir produtos nacionais e dar suporte a outros já existentes.</p>
+      <p>Somos uma empresa brasileira especializada no desenvolvimento e publicação de jogos. Somos apaixonados por todos os tipos de jogos: mobile, para computador, para consoles, jogos de tabuleiro e também jogos de cartas! Dessa paixão, surgiu a ideia de produzir produtos nacionais e dar suporte a outros que querem fazer o mesmo.</p>
     </div>
     <div class="one-third last">
-        <h2>Nossos Valores</h2>
-      <ul>
-        <li>Divertir todos os nossos clientes</li>
-        <li>Qualidade em todos os nossos produtos</li>
-        <li>Integrar todas as pessoas através de jogos</li>
-      </ul>
+        <h2>Nossa Missão</h2>
+        <p>Temos como missão integrar todas as pessoas do mundo através de jogos. É algo ousado, mas trabalhamos diariamente para cumprir essa quest!</p>
     </div>
     <!-- End Top Columns -->
     
@@ -148,7 +138,6 @@ $(document).ready(function()
           <li><span class="date"><em class="day">22</em><em class="month">Jun</em></span> <a href="#">Vivamus soder pharetra libero atincidunt</a> </li>
           <li><span class="date"><em class="day">14</em><em class="month">May</em></span> <a href="#">Vivamus soder pharetra libero atincidunt</a> </li>
           <li><span class="date"><em class="day">11</em><em class="month">May</em></span> <a href="#">Vivamus soder pharetra libero atincidunt</a> </li>
-          <li><span class="date"><em class="day">08</em><em class="month">Apr</em></span> <a href="#">Vivamus soder pharetra libero atincidunt</a> </li>
         </ul>
       </div>
       <div class="one-third">
