--- a/ourgames.html
+++ b/ourgames.html
@@ -78,15 +78,9 @@ $(document).ready(function()
   <div id="menu" class="menu opacity">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="ourgames.html">Jogos</a>
-        <ul>
-        	<li><a href="portfolio.html">Nossos Jogos</a></li>
-            <li><a href="ourgames.html">Jogos Públicados</a></li>
-        </ul>
-      </li>
+      <li><a href="ourgames.html">Jogos</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="about.html">Sobre Nós</a></li>
-      <li><a href="contact.html">Contato</a></li>
       <li><a href="press.html">Imprensa</a></li>
     </ul>
     <br style="clear: left" />
@@ -95,38 +89,27 @@ $(document).ready(function()
   
   <!-- Begin Container -->
   <div id="container" class="opacity">
-    <h2>Our Portfolio</h2>
-    <p>Pellentesque congue, lorem sed pulvinar faucibus, neque elit ullamcorper mi, in pretium odio dolor et ligula. Nullam ultricies ullamcorper turpis id semper. Vestibulum vel turpis sit amet lectus tincidunt euismod. Vestibulum suscipit neque bibendum sapien auctor luctus.</p>
-    
-    <!-- Begin Portfolio -->
-      <div id="portfolio">
-        <ul id="filtering-nav">
-          <li>Filter:</li>
-          <li><a class="all" href="#all">All</a></li>
-          <li><a class="cat1" href="#cat1">Category I</a></li>
-          <li><a class="cat2" href="#cat2">Category II</a></li>
-          <li><a class="cat3" href="#cat3">Video</a></li>
-        </ul>
-        <div class="clear"></div>
-        <div class="items">
-          <div class="box col5 cat1"><a href="style/images/art/p1.jpg" rel="prettyPhoto" title="this is title"><span class="overlay zoom"></span><img src="style/images/art/p1.jpg" alt="" /></a></div>
-          <div class="box col5 cat2"><a href="portfolio-post.html"><span class="overlay details"></span><img src="style/images/art/p2.jpg" alt="" /></a></div>
-       e   <div class="box col5 cat1"><a href="style/images/art/p3.jpg" rel="prettyPhoto" title="this is title"><span class="overlay zoom"></span><img src="style/images/art/p3.jpg" alt="" /></a></div>
-          <div class="box col5 cat2"><a href="style/images/art/p4.jpg" rel="prettyPhoto" title="this is title"><span class="overlay zoom"></span><img src="style/images/art/p4.jpg" alt="" /></a></div>
-          <div class="box col5 cat1"><a href="portfolio-post.html"><span class="overlay details"></span><img src="style/images/art/p5.jpg" alt="" /></a></div>
-          <div class="box col5 cat2"><a href="style/images/art/p6.jpg" rel="prettyPhoto" title="this is title"><span class="overlay zoom"></span><img src="style/images/art/p6.jpg" alt="" /></a></div>
-          <div class="box col5 cat1"><a href="style/images/art/p7.jpg" rel="prettyPhoto" title="this is title"><span class="overlay zoom"></span><img src="style/images/art/p7.jpg" alt="" /></a></div>
-          <div class="box col5 cat2"><a href="portfolio-post.html"><span class="overlay details"></span><img src="style/images/art/p8.jpg" alt="" /></a></div>
-          <div class="box col5 cat2"><a href="style/images/art/p9.jpg" rel="prettyPhoto" title="this is title"><span class="overlay zoom"></span><img src="style/images/art/p9.jpg" alt="" /></a></div>
-          <div class="box col5 cat1"><a href="style/images/art/p10.jpg" rel="prettyPhoto" title="this is title"><span class="overlay zoom"></span><img src="style/images/art/p10.jpg" alt="" /></a></div>
-          <div class="box col5 cat2"><a href="portfolio-post.html"><span class="overlay details"></span><img src="style/images/art/p11.jpg" alt="" /></a></div>
-          <div class="box col5 cat1"><a href="style/images/art/p12.jpg" rel="prettyPhoto" title="this is title"><span class="overlay zoom"></span><img src="style/images/art/p12.jpg" alt="" /></a></div>
-		  <div class="box col5 cat3"><a href="http://vimeo.com/25518056" rel="prettyPhoto" title="this is title"><span class="overlay play"></span><img src="style/images/art/p13.jpg" alt="" /></a></div>
-		  <div class="box col5 cat3"><a href="http://vimeo.com/6757600" rel="prettyPhoto" title="this is title"><span class="overlay play"></span><img src="style/images/art/p14.jpg" alt="" /></a></div>
-        </div>
-        <!-- .wrap --> 
+    <h2>Nossos Jogos</h2>
+    <p>Aqui estão presente todos os nossos jogos, desde nosso primeiro, Run Pony Run, até nossos projetos em andamento. </p>
+    <div class="clear"></div>
+    <br>
+    <br>
+    <!-- Begin Games -->
+    <div class="one-fourth"><img src="style/images/art/se1.jpg" alt="" /></div>
+    <div class="three-fourth last">
+        <h4>Match 3 Game</h4>
+        <p>Inspirado em clássicos de Match 3, como Bejeweled e Candy Crush. </p>
     </div>
-    <!-- End Portfolio -->
+    <div class="clear"></div>
+    <br>
+    <br>
+    <div class="one-fourth"><img src="style/images/art/se1.jpg" alt="" /></div>
+    <div class="three-fourth last">
+        <h4>Run Pony Run</h4>
+        <p>Nosso primeiro jogo, um endless run sobre uma simpática ponei chamada Brit que deseja correr pelo mundo todo! </p>
+    </div>
+
+    <!-- End Games -->
     
     <div class="clear"></div>
     <div id="footer">
