--- a/press.html
+++ b/press.html
@@ -78,15 +78,9 @@ $(document).ready(function()
   <div id="menu" class="menu opacity">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="ourgames.html">Jogos</a>
-        <ul>
-        	<li><a href="portfolio.html">Nossos Jogos</a></li>
-            <li><a href="ourgames.html">Jogos Públicados</a></li>
-        </ul>
-      </li>
+      <li><a href="ourgames.html">Jogos</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="about.html">Sobre Nós</a></li>
-      <li><a href="contact.html">Contato</a></li>
       <li><a href="press.html">Imprensa</a></li>
     </ul>
     <br style="clear: left" />
